# U-Tad

./: .gitignore  ITERATIONS.md  LICENSE  README.md
1st_Course/Projects l/Basics ll/Arduino_lcd_Temperature/: Arduino_lcd_Temperature.ino
1st_Course/Projects l/Basics ll/Arduino_lcd_hello_world/: Arduino_lcd_hello_world.ino
1st_Course/Projects l/Basics_l/1.Arduino_mainboard_led/: 1.Arduino_mainboard_led.ino
1st_Course/Projects l/Basics_l/2.Arduino_PushButton_Led/: 2.Arduino_PushButton_Led.ino
1st_Course/Projects l/Basics_l/3.Arduino_ON_OFF_Led/: 3.Arduino_ON_OFF_Led.ino
1st_Course/Projects l/Basics_l/4.Arduino_Led_Intensity/: 4.Arduino_Led_Intensity.ino
1st_Course/Projects l/Basics_l/5.Arduino_Led_Potentiometer/: 5.Arduino_Led_Potentiometer.ino
1st_Course/Projects l/Basics_l/6.Arduino_UltraSonic_Sensor1/: 6.Arduino_UltraSonic_Sensor1.ino
1st_Course/Projects l/Basics_l/7.Arduino_UltraSonic_Sensor2/: 7.Arduino_UltraSonic_Sensor2.ino
1st_Course/Projects l/Basics_l/8.Arduino_servo_basic/: 8.Arduino_servo_basic.ino
1st_Course/Projects l/Basics_l/9.Arduino_servo_potentiometer/: 9.Arduino_servo_potentiometer.ino
1st_Course/Projects_l/: README.md
1st_Course/Projects_l/Final_Project/: README.md
1st_Course/Projects_l/Unit_1/: 1.resistor.ino  10.servo.ino  11.buzzer.ino  12.lcd.ino  13.ultrasonic.ino  14.temperature_sensor.ino  15.dc_motor.ino  16.relay_module.ino  17.pwn_analog_output.ino  18.l2c_coms.ino  19.button_with_debounce.ino  2.capacitor.ino  20.example_light_sensitive.ino  21.example_servo_potentiometer.ino  22.light_control.ino  23.button_and_led.ino  24.rgb_with_buttons.ino  4.protoboard.ino  5.leds.ino  6.led_rgb.ino  7.sensors.ino  8.pushbutton.ino  9.tiltsensor.ino
1st_Course/Projects_l/Unit_2/: 1.hcsr04.ino  10.state_machine.ino  11.motor_h_bridge.ino  12.motor_pwn_control.ino  13.remote_dc.ino  14.transistor_to_switch.ino  15.joystick_with_servo.ino  16.sd7_shift_registers.ino  17.relay_to_lamp.ino  18.ir_led.ino  19.joystick_led_fade.ino  2.thermistor_sensor.ino  20.state_with_button.ino  21.pwm_dc_motor.ino  22.example_ultrasonic_distance.ino  23.example_ir_servo.ino  24.example_7segment_shift.ino  25.thermistor_lcd.ino  26.joystic+dc.ino  27.state_multi_device.ino  3.seven_segment_display.ino  5.ir_remote.ino  6.l298n_motor_driver.ino  7.npn_transistor_control.ino  8.relay_control.ino  9.joystick_control.ino
1st_Course/Q1/Creative_Thinking/: README.md
1st_Course/Q1/Logic_and_discrete_mathematics/: README.md
1st_Course/Q1/Networks_SO/: README.md
1st_Course/Q1/Programming_1/: README.md
1st_Course/Q1/Statistics/: README.md
1st_Course/Q1/Web_development/: README.md
1st_Course/Q2/Algebra/: README.md
1st_Course/Q2/Calculus/: README.md
1st_Course/Q2/Computer_Arch/: README.md
1st_Course/Q2/Databases/: README.md
1st_Course/Q2/Digital_Society/: README.md
1st_Course/Q2/Programming_2/: README.md
2nd_Course/Projects_ll/Exam_2/: test_u4.md
2nd_Course/Projects_ll/Unit_1/: unit_1.md
2nd_Course/Projects_ll/Unit_2/: Datos Excel para la práctica de la Unidad 2 (1).xlsx  unit_2.md
2nd_Course/Projects_ll/Unit_3/: unit_3.md
2nd_Course/Projects_ll/Unit_4/: unit_4.md
2nd_Course/Projects_ll/Unit_5/: unit_5.md
2nd_Course/Projects_ll/Unit_6/: unit_6.md
2nd_Course/Q1/Computer_networks/: README.md
2nd_Course/Q1/Fundamentals_of_VC/: README.md
2nd_Course/Q1/Linear_Algebra/: README.md
2nd_Course/Q1/Mathematical_Analysis_l/: README.md
2nd_Course/Q1/Operating_systems/: README.md
2nd_Course/Q1/POO/: README.md
2nd_Course/Q2/Algorithms/: README.md
2nd_Course/Q2/Bussiness_and_DM/: README.md
2nd_Course/Q2/Calculus/: README.md
2nd_Course/Q2/DataBases/: README.md
2nd_Course/Q2/Linear_Geometry/: README.md
2nd_Course/Q2/Mathematical_Analysis_ll/: README.md
2nd_Course/Q2/Software_Design/: README.md
3th_Course/Projects_lll/AEC3/: INSD_PRO3_Práctica_U3_Test_Belbin.xls  INSD_PRO3_Práctica_Unidad3_Plantilla_Entrega2.docx
3th_Course/Projects_lll/AEC5/: GUION_GRABACION_VIDEO.md  entrega.txt
3th_Course/Projects_lll/eventbrite_backend/: .env.example  README.md  package-lock.json  package.json  prisma.config.ts  tsconfig.json
3th_Course/Q1/Distributed_Systems/EXAM/Parte_PrácticaU3/4.RPC_Clase_Persona/Persona/: CMakeLists.txt  gestorClientes.cpp  gestorClientes.h  main.cpp  persona.cpp  persona.h  personaRemota.cpp
3th_Course/Q1/Distributed_Systems/Unit_2/AEC2/: .gitignore  CMakeLists.txt  README.md
3th_Course/Q1/Distributed_Systems/Unit_2/AEC2/docs/: libUtils_interface.h
3th_Course/Q1/Distributed_Systems/Unit_2/AEC2/include/: protocol.h  utils.h
3th_Course/Q1/Distributed_Systems/Unit_2/AEC2/src/: client.cpp  server.cpp  utils.cpp
3th_Course/Q1/Distributed_Systems/Unit_3/AEC3/: CMakeLists.txt  README.md
3th_Course/Q1/Distributed_Systems/Unit_3/AEC3/includes/: clientManager.h  utils.h
3th_Course/Q1/Distributed_Systems/Unit_3/AEC3/instrucciones/: INSD_PSDI_U3_Actividad_Práctica-1.md
3th_Course/Q1/Distributed_Systems/Unit_3/AEC3/src/: broker.cpp  client.cpp  clientManager.cpp  fileManagerRemoto.cpp  main_fm.cpp  server.cpp  utils.cpp
4th_Course/Q1/Algebraic_Structures/: README.md
4th_Course/Q2/UX_Fundamentals/: wireframe_1_stepper.html
(+2096 files in other folders)
